--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,19 @@ dependencies:
   date_tab_picker: ^0.1.0
 
 
+  gql_http_link: ^0.4.0
 
-  json_annotation: ^0.2.3
+  http_parser: ^4.0.0
+json_annotation: ^2.0.0
+
+json_serializable: ^6.0.0
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
